Fix to localstorage getting cleared and new entry alignment

--- a/app/styles/modules/_bookmarks.scss
+++ b/app/styles/modules/_bookmarks.scss
@@ -133,6 +133,7 @@ body {
   background-color: $bookmark-new-entry-background;
   border-radius: $bookmark-border-radius;
   cursor: pointer;
+  margin-left: $bookmark-margin - 5px;  // I don't know why this is needed
 }
 
 .new-entry__content {
